assets/css/style.css
body {
  background-image: url("../images/background.jpg");
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top center;
  background-attachment: fixed;
}

#gameBanner{
  margin:300px, auto, auto, auto;
  padding:20px;
  background-color:rgba(225, 230, 225, .8);
  text-align: center;
}

#gameScreen{
  padding-top: 25px;
  padding-bottom: 25px;
  text-align: center;
}

#quizContent{
  background-color:rgba(225, 230, 225, .8);
  display:none;
  padding:20px, auto, 20px, auto;
}


.choices {
}

#resultsContent{
  background-color:rgba(225, 230, 225, .8);
  display:none;
  padding:20px, auto, 20px, auto;
}

.footer{
  position:absolute;
  bottom:0;
  width:300px;
  /* left:50%;
  right:50%; */
  text-align:center;
  padding-bottom:20px;
  padding-top: 50px;
  color:rgba(225, 230, 225, .8);
}

